--- a/package.json
+++ b/package.json
@@ -3,12 +3,20 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://drielemoreira.github.io/Driele_dev_movie/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
+    
   },
+  "scripts ": {
+  "predeploy": "yarn build",
+  "deploy": "gh-pages -d build"
+},
   "dependencies": {
     "axios": "^1.8.4",
     "react": "^19.0.0",
@@ -29,6 +37,7 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "gh-pages": "^6.3.0",
     "globals": "^16.0.0",
     "prettier": "^3.5.3",
     "vite": "^6.3.0"
