--- a/package.json
+++ b/package.json
@@ -10,14 +10,10 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "predeploy": "yarn build",
-    "deploy": "gh-pages -d build"
-    
-  },
-  "scripts ": {
-  "predeploy": "yarn build",
-  "deploy": "gh-pages -d build"
-},
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
+   },
+
   "dependencies": {
     "axios": "^1.8.4",
     "react": "^19.0.0",
